# QtPropertyBrowser

./: .gitignore  CMakeLists.txt  QtPropertyBrowserConfig.cmake.in  README.md  UseQtPropertyBrowser.cmake.in  common.pri
examples/: CMakeLists.txt  examples.pro
examples/PropertyBrowser_PropertyChange/: PropertyBrowser_PropertyChange.pro  mainwindow.cpp  mainwindow.h
examples/simple/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  qtvariantproperty.cpp
